--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
