--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "web3": "^4.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
