--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   # Node Backend API
   backend:
     build: .
+    container_name: backend
     restart: on-failure
     env_file:
       - .env
@@ -18,6 +19,7 @@ services:
 
   # Optional MongoDB service
   mongo:
+    container_name: mongodb
     image: mongo:5.0.6
     restart: on-failure
     env_file:
@@ -30,6 +32,7 @@ services:
       - 27017:27017
     volumes:
       - mongodb-data:/data/db
+      - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh
     networks:
       - app-network
 
