--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: List directory contents
         run: ls -la
 
+      - name: Show env contents
+        run: cat .env.test
+
       - name: Install dependencies
         run: yarn
 
