--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -32,27 +32,16 @@ jobs:
       - name: Checkout codebase
         uses: actions/checkout@v2
 
+      # https://github.com/actions/setup-node
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ env.node-version }}
-
-      - name: List directory contents
-        run: ls -la
 
       - name: Read environment variables
         run: |
           echo '
           ${{ env.ENV_TEST }}
           ' > .env.test
-
-      - name: List directory contents
-        run: ls -la
-
-      - name: Show env contents
-        run: echo ${{ env.ENV_TEST }}
-
-      - name: Show env contents
-        run: cat .env.test
 
       - name: Install dependencies
         run: yarn
@@ -64,8 +53,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_USERNA        if: ${{ github.event_name!= 'pull_request' && github.branch!= 'dev' }}
+ME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      IMAGE_NAME: web3-auction-api
     steps:
       # https://github.com/actions/checkout
       - name: Checkout codebase
@@ -77,8 +68,6 @@ jobs:
 
       # https://github.com/docker/login-action
       - name: Login to DockerHub
-        # Only login if not a PR, as PRs only trigger a Docker build and not a push
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v2
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
@@ -87,12 +76,15 @@ jobs:
       ###############################################
       # Build/Push the API image
       ###############################################
-      - name: Build, tag, and push image to Docker hub
+      - name: Build and tag image
         id: build-image
         run: |
           docker image build \
-          --tag ${{ env.DOCKERHUB_USERNAME }}/web3-auction-api:latest \
-          --tag ${{ env.DOCKERHUB_USERNAME }}/web3-auction-api:${{ env.SHORT_SHA }} \
+          --tag "${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-${{ github.branch }}" \
+          --tag ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}-${{ github.branch }} \
           .
-          docker push ${{ env.DOCKERHUB_USERNAME }}/web3-auction-api:latest
-          docker push ${{ env.DOCKERHUB_USERNAME }}/web3-auction-api:${{ env.SHORT_SHA }}
+
+      - name: Push image to image registry
+        run: |
+          docker push "${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-${{ github.branch }}"
+          docker push "${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}-${{ github.branch }}"
